# sendspin-cpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  TODO.md  idf_component.yml  library.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: esp-idf.cmake  host.cmake  sources.cmake
docs/: integration-guide.md  internals.md
examples/basic_client/: CMakeLists.txt  README.md  main.cpp
examples/common/: portaudio_sink.cpp  portaudio_sink.h
examples/tui_client/: CMakeLists.txt  README.md  main.cpp  tui.cpp  tui.h
include/sendspin/: announcement_role.h  artwork_role.h  audio_sink.h  client.h  color_role.h  config.h  controller_role.h  metadata_role.h  player_role.h  protocol.h  types.h  visualizer_role.h
script/: clang-tidy.sh
src/: announcement_role.cpp  announcement_role_impl.h  announcement_task.cpp  announcement_task.h  artwork_role.cpp  artwork_role_impl.h  audio_ring_buffer.cpp  audio_ring_buffer.h  audio_stream_info.cpp  audio_stream_info.h  audio_types.h  audio_utils.h  client.cpp  client_bridge.h  color_role.cpp  color_role_impl.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  constants.h  controller_role.cpp  controller_role_impl.h  decoder.cpp  decoder.h  inbox.h  metadata_role.cpp  metadata_role_impl.h  player_role.cpp  player_role_impl.h  protocol.cpp  protocol_messages.h  sync_task.cpp  sync_task.h  sync_time_provider.h  time_burst.cpp  time_burst.h  time_filter.cpp  time_filter.h  transfer_buffer.cpp  (+3 more)
src/esp/: client_connection.cpp  client_connection.h  network_info.cpp  server_connection.cpp  server_connection.h  ws_server.cpp  ws_server.h
src/host/: client_connection.cpp  client_connection.h  network_info.cpp  server_connection.cpp  server_connection.h  ws_server.cpp  ws_server.h
src/platform/: base64.h  compiler.h  event_flags.h  json_arena.h  logging.h  memory.h  network_info.h  shadow_slot.h  spsc_ring_buffer.h  thread.h  thread_safe_queue.h  time.h  types.h
tests/: CMakeLists.txt  README.md  test_announcement_role.cpp  test_artwork_role.cpp  test_audio_stream_info.cpp  test_connection_lifecycle.cpp  test_inbox.cpp  test_network_info.cpp  test_protocol.cpp  test_spsc_ring_buffer.cpp  test_time_filter.cpp  test_visualizer_role.cpp
